--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,4 +1,4 @@
-* {
+/* * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
@@ -32,4 +32,4 @@ body {
   grid-area: 1 / 6 / 6 / 9;
   background-color: green;
 }
-/*# sourceMappingURL=index.css.map */
+# sourceMappingURL=index.css.map */
