--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,2 +1,7 @@
 @import "./settings";
 @import "./components/navigation";
+@import "./components/chiffres";
+@import "./components/strategies";
+@import "./components/card-product";
+@import "./components/card-contact";
+@import "./components/card-document";
