--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -5,3 +5,4 @@
 @import "./components/card-product";
 @import "./components/card-contact";
 @import "./components/card-document";
+@import "./components/btn-add";
